tracking and counting

--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,7 @@ cython_debug/
 #.idea/
 
 data/
-models/
+
 .DS_Store
 
 yolo-runs/
@@ -168,5 +168,7 @@ yolo-mis/
 mis/
 logs/
 
-*.pt
+
 *.pth
+video/
+output/
